--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -211,7 +211,7 @@ grid.arrange(p1, p2, ncol = 2, top = "Uncorrelated tissues")
 ## Figure 3: cTWAS estimates genetic architecture of complex traits from GTEx
 
 ### Figure 3a: Modalities are mostly independent
-```{r, echo=FALSE, fig.height=5, fig.width=4}
+```{r, echo=FALSE, fig.height=4, fig.width=6}
 folder_results_single_E <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_single_S <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/splicing/"
 folder_results_single_ST <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/stability/"
@@ -416,7 +416,7 @@ make_eqtl_prop_plot("LDL-ukb-d-30780_irnt")$plot
 ## Figure 4: Multi-cTWAS improves the discovery of candidate genes
 
 ### Figure 4a: Incorporating multiple modality and tissues improves discovery power
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=6}
 folder_results_single <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
 folder_results_multi_E <- "/project/xinhe/xsun/multi_group_ctwas/26.multi_tissue_eQTL_0805/snakemake_outputs/"
@@ -541,7 +541,7 @@ plots <- plot_number_of_signals_per_region_distributions(
 )
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
 print(plots)
 ```
 
@@ -551,7 +551,7 @@ print(plots)
 </figure>
 
 ### Figure S9: Coloc examples at FASD1 locus
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, fig.width=6}
 library(igraph)
 coloc_res <- readRDS("/project/xinhe/shengqian/coloc_GWAS_analysis/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.coloc_res.RDS")
 coloc_res <- coloc_res[coloc_res$PP4>0.8,]
@@ -600,7 +600,7 @@ V(g)$label.cex   <- 0.55
 
 # Plot
 plot(g, layout = lay, edge.arrow.mode = 0, edge.label = "",
-     margin = c(0.1, 0.1, 0.1, 0.8))
+     margin = c(0.1, 0.1, 0.1, 0.3))
 
 legend("right", inset = c(-0.1, 0), legend = groups,
        col = pal[groups], lwd = 2, bty = "n", cex = 0.75, title = "Group")
@@ -667,7 +667,7 @@ for(i in names(trait_list)){
 }
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
 library(grex)
 library(ggplot2)
 trait_list <- list("LDL-ukb-d-30780_irnt" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_biochemistry_LDLdirect.txt")
@@ -726,7 +726,7 @@ for(i in names(trait_list)){
 ```
 
 ### Figure S10: Compare with TGFM: (HTN)
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
 library(grex)
 library(ggplot2)
 trait_list <- list("HTN-panukb" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_disease_HYPERTENSION_DIAGNOSED.txt")
@@ -804,8 +804,8 @@ combined_pip_by_context_multi <- readRDS(paste0(folder_results_multi,trait,"/",t
 #combined_pip_by_group_single_sig <- combined_pip_by_group_single[combined_pip_by_group_single$combined_pip > PIP_cutoff,]
 #combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[combined_pip_by_context_multi$combined_pip > PIP_cutoff,]
   
-combined_pip_by_group_multi_sig <- combined_pip_by_group_multi[1:30,]
-combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[1:30,]
+combined_pip_by_group_multi_sig <- combined_pip_by_group_multi[1:10,]
+combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[1:10,]
 #combined_pip_by_group_multi_unique <- combined_pip_by_group_multi_sig[!combined_pip_by_group_multi_sig$gene_name %in% combined_pip_by_group_single_sig$gene_name, ]
 #combined_pip_by_context_multi_unique <- combined_pip_by_context_multi_sig[!combined_pip_by_context_multi_sig$gene_name %in% combined_pip_by_group_single_sig$gene_name, ]
 
@@ -940,7 +940,7 @@ pie(
 ```
 
 ### Figure 6b: Using epiQTL discovered novel CREs not explained by eQTLs
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=5}
 mapping_table <- readRDS("/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/gene_mapping.RDS")
 predictdb_mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
 mapping_table <- rbind(mapping_table,predictdb_mapping_table)
@@ -1012,7 +1012,7 @@ ggplot(df, aes(x = category, y = prop, fill = category)) +
 ```
 
 Most randomly sampled CpGs are also in OCRs. Possible reason: Array is designed to measure CpGs near promoter regions. 
-```{r echo=FALSE}
+```{r, eval=FALSE, echo=FALSE}
 #library(annotatr)
 #dm_regions = read_regions(con = "/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs.bed", genome = 'hg38',format = 'bed')
 #annots = c('hg38_basicgenes', 'hg38_genes_intergenic')
@@ -1247,8 +1247,8 @@ ggplot(df, aes(x = category, y = prop, fill = category)) +
   theme(legend.position = "none")
 ```
 
-### Figure 6d: Do epiQTLs explain eqtlS? Independent PHE
-```{r}
+### Figure 6d: Do epiQTLs explain eqtls? Independent PHE
+```{r echo=FALSE}
 param_eQTL <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL/SCZ_eQTL.parameters.RDS")
 param_eQTL_epiQTL <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
 
