--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -23,6 +23,8 @@ library(mapgen)
 library(RSQLite)
 library(RColorBrewer)
 library(scales)
+library(igraph)
+library(ggraph)
 source("/project/xinhe/shengqian/cTWAS_paper_figures/plot_function.R")
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 ```
@@ -211,7 +213,7 @@ grid.arrange(p1, p2, ncol = 2, top = "Uncorrelated tissues")
 ## Figure 3: cTWAS estimates genetic architecture of complex traits from GTEx
 
 ### Figure 3a: Modalities are mostly independent
-```{r, echo=FALSE, fig.height=4, fig.width=6}
+```{r, echo=FALSE, fig.height=5, fig.width=8}
 folder_results_single_E <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_single_S <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/splicing/"
 folder_results_single_ST <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/stability/"
@@ -416,7 +418,7 @@ make_eqtl_prop_plot("LDL-ukb-d-30780_irnt")$plot
 ## Figure 4: Multi-cTWAS improves the discovery of candidate genes
 
 ### Figure 4a: Incorporating multiple modality and tissues improves discovery power
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=6}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
 folder_results_single <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
 folder_results_multi_E <- "/project/xinhe/xsun/multi_group_ctwas/26.multi_tissue_eQTL_0805/snakemake_outputs/"
@@ -541,7 +543,7 @@ plots <- plot_number_of_signals_per_region_distributions(
 )
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=8, fig.width=12}
 print(plots)
 ```
 
@@ -667,7 +669,7 @@ for(i in names(trait_list)){
 }
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, fig.width=8}
 library(grex)
 library(ggplot2)
 trait_list <- list("LDL-ukb-d-30780_irnt" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_biochemistry_LDLdirect.txt")
@@ -726,7 +728,7 @@ for(i in names(trait_list)){
 ```
 
 ### Figure S10: Compare with TGFM: (HTN)
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=8}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, fig.width=8}
 library(grex)
 library(ggplot2)
 trait_list <- list("HTN-panukb" = "/project/xinhe/xsun/multi_group_ctwas/data/tgfm/GTEx_TGFM_PIPs_disease_HYPERTENSION_DIAGNOSED.txt")
@@ -784,7 +786,7 @@ for(i in names(trait_list)){
 }
 ```
 
-### Figure 5: cTWAS discovers candidate genes for complex traits and provides insights on their molecular mechanisms 
+## Figure 5: cTWAS discovers candidate genes for complex traits and provides insights on their molecular mechanisms 
 ```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=8, fig.width=10}
 folder_results_single <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
@@ -825,24 +827,13 @@ grid.newpage()
 print(p2)
 ```
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=25, fig.width=30}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=12, fig.width=12}
 draw(p1 + p2,heatmap_legend_side = "right",
   annotation_legend_side = "right")
 ```
 
-
-### Figure 5b: Gene set enrichment analysis
-<figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_pathway_enrichment.png" width="150%">
-</figure>
-
-### Figure 5c: Network analysis of candidate genes suggests novel pathways
-<figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_gene_clusters.png" width="150%">
-</figure>
-
-### Figure 5d: A substantial fraction of cTWAS genes are novel
-```{r,  echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+### Figure 5b: A substantial fraction of cTWAS genes are novel
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
 mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
 mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
 mapping_table <- rbind(mapping_predictdb, mapping_munro)
@@ -850,6 +841,33 @@ snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/
 aa <- make_ctwas_category_barplot(trait = "LDL-ukb-d-30780_irnt",
                             mapping_table = mapping_table,
                             snp_map = snp_map)
+aa$plot
+```
+
+### Figure 5c: Network analysis of candidate genes suggests novel pathways
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 5, fig.height= 5}
+string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_LDL.tsv",header = F)
+graph <- graph_from_data_frame(d = string, directed = FALSE)
+comp <- components(graph)
+V(graph)$component <- comp$membership
+set.seed(123)
+ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
+  geom_edge_link(aes(alpha = 0.4), color = "grey70") +
+  geom_node_point(aes(color = factor(component)), size = 5) +
+  geom_node_text(aes(label = name), repel = TRUE) +
+  theme_void() + theme(legend.position = "none")
+```
+
+### Figure 5d: A substantial fraction of cTWAS genes are novel
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
+mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
+mapping_table <- rbind(mapping_predictdb, mapping_munro)
+snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
+aa <- make_ctwas_category_barplot(trait = "LDL-ukb-d-30780_irnt",
+                            mapping_table = mapping_table,
+                            snp_map = snp_map)
+aa$plot
 ```
 
 ### Figure 5e: locus examples
@@ -940,7 +958,7 @@ pie(
 ```
 
 ### Figure 6b: Using epiQTL discovered novel CREs not explained by eQTLs
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=5}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=3}
 mapping_table <- readRDS("/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/gene_mapping.RDS")
 predictdb_mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
 mapping_table <- rbind(mapping_table,predictdb_mapping_table)
@@ -970,7 +988,7 @@ ggplot(df, aes(x = category, y = count, fill = category)) +
 ```
 
 ### Figure 6c: Validation of meQTL results.
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=3}
 all_cre_cpgs <- fread("/project2/xinhe/shengqian/cTWAS_epigenetics/data/all_cre_cpgs.bed")
 random_cpgs <- fread("/project2/xinhe/shengqian/cTWAS_epigenetics/data/random_cpgs.bed")
 
@@ -1192,8 +1210,8 @@ stat_dt <- data.table(
 )
 stat_dt[, proportion := n / n_cpg]
 
-cat("\nProportion of CpGs present in exactly k cell-type peaks:\n")
-print(stat_dt)
+#cat("\nProportion of CpGs present in exactly k cell-type peaks:\n")
+#print(stat_dt)
 # ---- optional: quick bar plot to screen (not saved) ----
 ggplot(stat_dt, aes(x = factor(peaks), y = proportion)) +
   geom_col(fill = "#FF9999") +
@@ -1205,7 +1223,7 @@ ggplot(stat_dt, aes(x = factor(peaks), y = proportion)) +
 ```
 
 ### Figure S: Do eQTLs explain epiQTLs? GTEx is limited in power. Most mQTLs and caQTLs are eQTLs in MetaBrain eQTL
-```{r echo=FALSE}
+```{r echo=FALSE,fig.height=4,fig.width=3}
 driver <- dbDriver('SQLite')
 db <- dbConnect(drv = driver, "/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/brain_mQTL.db")
 query <- function(...) RSQLite::dbGetQuery(db, ...)
@@ -1242,13 +1260,13 @@ ggplot(df, aes(x = category, y = prop, fill = category)) +
   labs(title = "",
        x = "",
        y = "Proportion of mQTLs and caQTLs that are also eQTLs") +
-  scale_fill_manual(values = c("mQTLs" = "#7fc97f", "caQTLs" = "#fdc086"))+
+  scale_fill_manual(values = c("mQTLs" = "#ffe1a8", "caQTLs" = "#e26d5c"))+
   theme_minimal() + ylim(c(0,1)) +
   theme(legend.position = "none")
 ```
 
 ### Figure 6d: Do epiQTLs explain eqtls? Independent PHE
-```{r echo=FALSE}
+```{r echo=FALSE,fig.height=4, fig.width=3}
 param_eQTL <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL/SCZ_eQTL.parameters.RDS")
 param_eQTL_epiQTL <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
 
@@ -1281,7 +1299,7 @@ ggplot(df2, aes(x = Bar, y = Value, fill = Component)) +
 ```
 
 ### Figure 6d: Do epiQTLs explain eqtlS? few PIPs decreased aftering adding epiQTLs
-```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide',fig.height=5, fig.width=5}
 suppressMessages({
   suppressWarnings({
     eQTL_res <- get_gene_res(mapping_table, "/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL/SCZ_eQTL.finemap_regions_res.RDS", snp_map)
