--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -894,14 +894,14 @@ ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
 
 ## Figure 6: Brain epiQTLs explain a large fraction of missing heritability by eQTLs
 
-### Figure 6a: EpiQTLs explain a larger fraction of h2g than eQTLs
+### Figure 6a: EpiQTLs together explain a larger fraction of h2g than eQTLs
 
 ```{r,echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
 prop_heritability <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
 prop_heritability <- prop_heritability$prop_heritability
 prop_heritability <- c(sum(prop_heritability[1:5]),sum(prop_heritability[6:7]),prop_heritability[8],prop_heritability[9])
 #colors <- brewer.pal(n = 4, name = "Set2")  # Alternatives: "Pastel1", "Dark2", "Set3"
-colors <- c("#b3cde3","#ccebc5","#decbe4","#fbb4ae")
+colors <- c("#fb8072", "#80b1d3", "#fdb462", "#fbf6ef")
 # Draw pie chart
 pie(
   prop_heritability,
