--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -328,14 +328,14 @@ p <- grid.arrange(pie1, pie2, pie3,
 ```
 
 ### Figure 3b: Shared pattern (eQTL)
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=8, fig.width=8}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=6}
 trait <- "LDL-ukb-d-30780_irnt" #IBD-ebi-a-GCST004131 #LDL-ukb-d-30780_irnt
 out <- plot_pairwise_PVE(trait, samplesize, n_top = 5)
 out[[1]]
 ```
 
 ### Figure S7: Shared pattern (sQTL)
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=8, fig.width=8}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=6}
 out[[2]]
 ```
 
@@ -856,7 +856,7 @@ grid.newpage()
 print(p2)
 ```
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, fig.width=12}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=8, fig.width=12}
 draw(p1 + p2,heatmap_legend_side = "right",
   annotation_legend_side = "right")
 ```
@@ -887,9 +887,31 @@ ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
   theme_void() + theme(legend.position = "none")
 ```
 
+### Figure S10: Network analysis of candidate genes suggests novel pathways
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 5, fig.height= 5}
+string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_IBD.tsv",header = F)
+graph <- graph_from_data_frame(d = string, directed = FALSE)
+comp <- components(graph)
+V(graph)$component <- comp$membership
+set.seed(1233)
+ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
+  geom_edge_link(aes(alpha = 0.4), color = "grey70") +
+  geom_node_point(aes(color = factor(component)), size = 5) +
+  geom_node_text(aes(label = name), repel = TRUE) +
+  theme_void() + theme(legend.position = "none")
+```
+
 ### Figure 5e: locus examples
 <figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL-ukb-d-30780_irnt/multi/LDLR.png" width="150%">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/paper_locus_plot/LDLR.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/paper_locus_plot/PCSK9.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/paper_locus_plot/SNX17.png" width="150%">
 </figure>
 
 ## Figure 6: Brain epiQTLs explain a large fraction of missing heritability by eQTLs
@@ -1164,7 +1186,7 @@ p1 <- ggplot(merged_result, aes(x = total_susie_pip,
 p1
 ```
 
-### Figure S10: Do eQTLs explain epiQTLs? Why eQTLs do not explain epiQTLs. Cell type specific mQTLs
+### Figure S11: Do eQTLs explain epiQTLs? Why eQTLs do not explain epiQTLs. Cell type specific mQTLs
 ```{r echo=FALSE, fig.height=5, fig.width=5}
 # ---- settings ----
 workdir <- "/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs_peaks/"
@@ -1239,7 +1261,7 @@ ggplot(stat_dt, aes(x = factor(peaks), y = proportion)) +
   theme_classic()
 ```
 
-### Figure S11: Do eQTLs explain epiQTLs? GTEx is limited in power. Most mQTLs and caQTLs are eQTLs in MetaBrain eQTL
+### Figure S12: Do eQTLs explain epiQTLs? GTEx is limited in power. Most mQTLs and caQTLs are eQTLs in MetaBrain eQTL
 ```{r echo=FALSE,fig.height=4,fig.width=3}
 driver <- dbDriver('SQLite')
 db <- dbConnect(drv = driver, "/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/brain_mQTL.db")
