--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -862,7 +862,7 @@ draw(p1 + p2,heatmap_legend_side = "right",
 ```
 
 ### Figure 5b: A substantial fraction of cTWAS genes are novel
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width= 4, fig.height= 6}
 mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
 mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
 mapping_table <- rbind(mapping_predictdb, mapping_munro)
