--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -328,14 +328,14 @@ p <- grid.arrange(pie1, pie2, pie3,
 ```
 
 ### Figure 3b: Shared pattern (eQTL)
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=6, fig.width=6}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=5.5, fig.width=6}
 trait <- "LDL-ukb-d-30780_irnt" #IBD-ebi-a-GCST004131 #LDL-ukb-d-30780_irnt
 out <- plot_pairwise_PVE(trait, samplesize, n_top = 5)
 out[[1]]
 ```
 
 ### Figure S7: Shared pattern (sQTL)
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=6}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=5.5, fig.width=6}
 out[[2]]
 ```
 
@@ -455,7 +455,7 @@ for(i in traits){
 
 ### Figure 4b: M-cTWAS identified genes with higher POPS scores
 Averaged POPS scores across all traits stratified by M-cTWAS PIPs 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height=67}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height6}
 traits <- c(
   "SBP-ukb-a-360", "LDL-ukb-d-30780_irnt", "aFib-ebi-a-GCST006414",
   "WBC-ieu-b-30", "IBD-ebi-a-GCST004131", "BMI-panukb",
@@ -480,7 +480,7 @@ plot_pops_by_pip_bin(plot_df,"POPs score across all traits")
 ```
 
 ### Figure 4c: Validation with Silver Standand Genes
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height=7}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height=6}
 trait <- "LDL-ukb-d-30780_irnt"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
 traits_silver <- c("T2D","LDL","BMI","RBC","IBD","SCZ","aFib")
