--- a/analysis/pops_supplementary_figures.Rmd
+++ b/analysis/pops_supplementary_figures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "cTWAS paper figures"
+title: "POPS analysis supplementary figures"
 output: html_document
 date: '2025-8-18'
 editor_options: 
