--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,6 +10,7 @@ editor_options:
 # cTWAS paper figures
   * [cTWAS paper figures](ctwas_paper_figures.html)
   * [POPS scores supplementary figures (individual trait)](pops_supplementary_figures.html)
+  * [Novel gene category supplementary figures (individual trait)](novel_gene_category_supplementary_figures.html)
   * [cTWAS network analysis](ctwas_network_analysis.html)
 
 # Data
