--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,6 +9,9 @@ editor_options:
 ---
 # cTWAS paper figures
   * [cTWAS paper figures](ctwas_paper_figures.html)
+  * [Partition of h2g supplementary figures (other traits)](partition_of_h2g_supplementary.html)
+  * [Overestimate eQTL supplementary figures (other traits)](overestimate_eQTL_supplementary.html)
+  * [Increase power supplementary figures (other traits)](increase_power_supplementary.html)
   * [POPS scores supplementary figures (individual trait)](pops_supplementary_figures.html)
   * [Novel gene category supplementary figures (individual trait)](novel_gene_category_supplementary_figures.html)
   * [cTWAS network analysis](ctwas_network_analysis.html)
