--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -356,6 +356,9 @@ grid::grid.draw(p)
 invisible(NULL)
 ```
 
+### Figure S: Partition of h2g for other traits
+https://sq-96.github.io/multigroup_ctwas_analysis/partition_of_h2g_supplementary.html
+
 ### Figure 3d: Existing methods may overestimate the contribution of molQTL.
 ```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE}
 gwas <- readRDS("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.3qtls.thin1.shared_all.L5.regionmerge_with_mappingtable_finemap_res.RDS")
@@ -414,6 +417,9 @@ plot_MESC_eQTL_heritability("LDL-ukb-d-30780_irnt")$plot
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 make_eqtl_prop_plot("LDL-ukb-d-30780_irnt")$plot
 ```
+
+### Figure S: Existing methods may overestimate the contribution of molQTL for other traits
+https://sq-96.github.io/multigroup_ctwas_analysis/overestimate_eQTL_supplementary.html
 
 ## Figure 4: Multi-cTWAS improves the discovery of candidate genes
 
@@ -495,7 +501,8 @@ plot_df <- na.omit(plot_df)
 plot_pops_by_pip_bin(plot_df,"POPs score across all traits")
 ```
 
-
+### Figure 4b: POPS scores of individual trait
+https://sq-96.github.io/multigroup_ctwas_analysis/pops_supplementary_figures.html
 
 ### Figure 4c: Validation with LDL Silver Standand Genes
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.width=6, fig.height=6}
@@ -933,6 +940,9 @@ aa <- make_ctwas_category_barplot(trait = "LDL-ukb-d-30780_irnt",
                             snp_map = snp_map)
 aa$plot
 ```
+
+### Figure S: Novel gene category for other traits
+https://sq-96.github.io/multigroup_ctwas_analysis/novel_gene_category_supplementary_figures.html
 
 ### Figure 5c: Network analysis of candidate genes suggests novel pathways
 ```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 5, fig.height= 5}
