--- a/analysis/overestimate_eQTL_supplementary.Rmd
+++ b/analysis/overestimate_eQTL_supplementary.Rmd
@@ -38,7 +38,7 @@ traits <- c(
   "SBP-ukb-a-360", 
   "T1D-GCST90014023",
   "T2D-panukb",
-  "ATH_gtexukb",
+  #"ATH_gtexukb",
   "BMI-panukb",
   "HB-panukb",
   "Height-panukb",
