--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,6 +13,7 @@ editor_options:
   * [Overestimate eQTL supplementary figures (other traits)](overestimate_eQTL_supplementary.html)
   * [Increase power supplementary figures (other traits)](increase_power_supplementary.html)
   * [POPS scores supplementary figures (individual trait)](pops_supplementary_figures.html)
+  * [Number of signals per locus supplementary figures (other traits)](number_of_signals_per_locus_supplementary.html)
   * [Novel gene category supplementary figures (individual trait)](novel_gene_category_supplementary_figures.html)
   * [cTWAS network analysis](ctwas_network_analysis.html)
 
