--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,6 +14,7 @@ editor_options:
   * [Increase power supplementary figures (other traits)](increase_power_supplementary.html)
   * [POPS scores supplementary figures (individual trait)](pops_supplementary_figures.html)
   * [Number of signals per locus supplementary figures (other traits)](number_of_signals_per_locus_supplementary.html)
+  * [Causal modality and context supplementary figures (other traits)](causal_modality_context_supplementary.html)
   * [Novel gene category supplementary figures (individual trait)](novel_gene_category_supplementary_figures.html)
   * [cTWAS network analysis](ctwas_network_analysis.html)
 
